--- a/7 css media queries/styles.css
+++ b/7 css media queries/styles.css
@@ -3,6 +3,7 @@ body{
     margin-top: 10px;
     margin-left: 10%;
     margin-right: 10%;
+    font-size: 10px;
 }
 
 .black-border{
@@ -12,28 +13,49 @@ body{
 .nice-border{
     border: 5px solid purple;
 /* Deze werken niet meer vanwege de shorthand padding notatie */
-    padding-top: 30px;
+    /* padding-top: 30px;
     padding-right: 40px;
     padding-bottom: 30px;
-    padding-left: 40px;
+    padding-left: 40px; */
 
 /* shorthand */
-    padding: 10px 20px;
+    padding: 10px 5px;
 }
 
 .automargin{
     border: 5px solid blue;
     margin: 0 auto;
     width: 80%;
-    padding: 10px;
+    padding: 5px;
+}
+
+.automargin ul{
+    padding-inline-start: 0px;
 }
 
 .automargin li {
     display: inline;
-    padding: 20px;
+    padding: 5px;
 }
 #green-back{
     background-color: green;
     padding: 5px;
     border-radius: 10px;
+}
+
+
+@media (min-width: 1024px){
+    body{
+        background-color: blue;
+        color: yellow;
+        font-size: 14px;
+        line-height: 1.5em;
+    }
+    .nice-border{
+        background-color: chartreuse;
+        color: blue;
+    }
+    .automargin{
+        background-color: white;
+    }
 }
